--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main glee139/failing_tests khamm004/passing_tests ]
+    branches: [ main, glee139/failing_tests, khamm004/passing_tests ]
   pull_request:
     branches: [ main ]
 
